# luciene-sl

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
programs/lucien/: Cargo.toml
programs/lucien/src/: lib.rs
programs/lucien/src/data/: mod.rs  price.rs
programs/lucien/src/errors/: mod.rs
programs/lucien/src/instructions/: calculate_features.rs  fetch_price.rs  initialize.rs  mod.rs  run_inference.rs
programs/lucien/src/model/: linear.rs  mod.rs
programs/lucien/src/models/: linear.rs
programs/lucien/src/state/: mod.rs  model_experiments.rs  model_features.rs
programs/lucien/tests/: test_account_fetching.rs  test_connectivity.rs  test_initialize_accounts.rs  test_program_exist.rs  test_program_instructions.rs
programs/luciene_sl/: Cargo.toml  README.md
programs/luciene_sl/src/: lib.rs
programs/luciene_sl/src/errors/: mod.rs
programs/luciene_sl/src/instructions/: calculate_features.rs  fetch_price.rs  initialize.rs  run_inference.rs
programs/luciene_sl/src/state/: data_prices.rs  mod.rs  model_experiments.rs
programs/luciene_sl/tests/: test_calculate_features.rs  test_fetch_data_prices.rs  test_fetch_model_params.rs  test_initialize_data_accounts.rs  test_initialize_model_accounts.rs
python/lucien/: __init__.py  sys_metrics.py
python/lucien/verifiers/: cpu_arch.py  gpu_arch.py  os_details.py
rust/: command.rs  lib.rs
scripts/: Cargo.toml
scripts/src/: main.rs
src/: main.rs
tests/: Cargo.toml  test_package.py
tests/src/: test_initialize.rs
