[workspace]

resolver = "2"

members = [
    # Solana Programs
    "programs/lucien",
]

default-members = [
  "programs/lucien"
]

[workspace.package]
edition = "2021"
rust-version = "1.84.1"
authors = ["IteraLabs.ai <hello@iteralabs.ai>"]
license = "Apache-2.0"
keywords = ["machine-learning", "framework", "agentic", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]
documentation = "https://docs.rs/lucien/"
repository = "https://github.com/iteralabs/lucien"
homepage = "https://iteralabs.ai/lucien"
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]
include = ["katex-header.html"]

[workspace.dependencies]
anchor-lang = { version = "0.31.1" }
anchor-client = { version = "0.31.1" }
pyth-solana-receiver-sdk = { version = "0.6.1" }
libm = {version = "0.2.15" }
solana-sdk = { version = "2.2.0" }
tokio = { version = "1.45" }
solana-client = { version = "2.2.7" }

#solana-program-test = { version = "1.18.26" } 

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

