[workspace]

resolver = "2"

members = [
    # Solana Programs
    "programs/luciene_sl",
]

default-members = [
  "programs/luciene_sl"
]

[workspace.package]
edition = "2021"
rust-version = "1.84.1"
authors = ["iteralabs.xyz <support@iteralabs.xyz>"]
license = "Apache-2.0"
keywords = ["machine-learning", "framework", "agentic", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]
documentation = "https://docs.rs/luciene_sl/"
repository = "https://github.com/iteralabs/luciene-sl"
homepage = "https://iteralabs.xyz/luciene_sl"
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]
include = ["katex-header.html"]

[workspace.dependencies]
anchor-lang = { version = "0.31.1" }
anchor-client = { version = "0.31.1" }
pyth-solana-receiver-sdk = { version = "0.6.1" }
libm = {version = "0.2.15" }
solana-sdk = { version = "2.2.0" }
tokio = { version = "1.45" }
solana-client = { version = "2.2.7" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

