[package]
name = "tests"
version = "0.0.1"
description = "Lucien Agent Tests"
edition = "2021"

[dependencies]

lucien = { version = "0.0.1", path = "../programs/lucien" }

anchor-client = { version = "0.31.1" }
anchor-lang = { version = "0.31.1" }
pyth-solana-receiver-sdk = { version = "0.6.1" }
solana-sdk = { version = "2.2.0" }

tokio = { version = "1.45", features = ["full"] }
anyhow = { version = "1.0" }

[dev-dependencies]
tokio-test = "0.4"
