[package]
name = "lucien"
version = "0.0.1"
description = "Lucid Agent OnChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucien"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { workspace = true }
pyth-solana-receiver-sdk = { workspace = true }
libm = { workspace = true }

[dev.dependencies]

